# assigato-remote

./: .gitignore  Cargo.toml  Gemfile  README.md  package.json
app/assets/javascripts/: led-display.coffee
app/assets/javascripts/cable/subscriptions/: robot_control.coffee
app/assets/stylesheets/: robot-control.scss
app/channels/: robot_control_channel.rb
app/controllers/: application_controller.rb
app/models/: robot.rb  robot_state.rb
app/views/application/: robot_control.html.erb
app/views/layouts/: application.html.erb
config/: application.rb  cable.yml  credentials.yml.enc  master.key  robot.yaml  routes.rb  settings.yml
config/environments/: development.rb  production.rb
config/initializers/: robot.rb
config/settings/: production.yml
htdocs/: index.html
htdocs/js/: robot.js
htdocs/styles/: robot-control.less  vertical-slider.less
src/: lib.rs
