[package]
name = "assigato-remote"
version = "0.1.0"
authors = ["Matt Harrington <querry43@gmail.com>"]

[dependencies]
pi-robot = { git = "https://github.com/querry43/rust-pi-robot.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ws = "0.7"

[replace]
"skeptic:0.13.2" = { git = 'https://github.com/budziq/rust-skeptic' }
